# nlp_project

./: README.md  basics.ipynb  nlpsa.py  pyproject.toml  sentimentAnalysys.py  sentimentAnalysys_bk.py  utils.py
data/: corpus.pkl  cv.pkl  cv_stop.pkl  dtm.pkl  dtm_stop.pkl
